--- a/css/style.css
+++ b/css/style.css
@@ -1,320 +1,259 @@
-h1,
-.start {
-	font-family: 'Alfa Slab One', cursive !important;
+h1, .start {
+     font-family: 'Alfa Slab One', cursive !important;
 }
-
-.invisible {
-	display: none;
+ .cent {
+     margin: 0px auto;
+     display: block;
 }
-
-.cent {
-	margin: 0px auto;
-	display: block;
+ .mb20 {
+     margin-bottom: 20px;
 }
-
-.mb20 {
-	margin-bottom: 20px;
+ .mb10 {
+     margin-bottom: 10px;
 }
-
-.mb10 {
-	margin-bottom: 10px;
+ .mb0 {
+     margin-bottom: 0px;
 }
-
-.mb0 {
-	margin-bottom: 0px;
+ .titlu-joc {
+     font-size: 4em;
 }
-
-#startgame {
-	display: block;
+ .decoration {
+     width: 35px;
+     margin-bottom: 7px;
 }
-
-.titlu-joc {
-	font-size: 4em;
+ .fb {
+     max-width: 100px;
+     margin: 0px auto;
+     display: block;
 }
-
-.decoration {
-	width: 35px;
-	margin-bottom: 7px;
+ .switch label {
+     font-size: 1.1rem;
 }
-
-.fb {
-	max-width: 100px;
-	margin: 0px auto;
-	display: block;
+ .switch label input[type=checkbox]:checked+.lever {
+     background-color: #ccc;
 }
-
-.switch label {
-	font-size: 1.1rem;
+ .switch label input[type=checkbox]:checked+.lever:after {
+     background-color: rgb(13, 71, 161);
 }
-
-.switch label input[type=checkbox]:checked+.lever {
-	background-color: #ccc;
+ #changetoen, #changetoro {
+     cursor: pointer;
 }
-
-.switch label input[type=checkbox]:checked+.lever:after {
-	background-color: rgb(13, 71, 161);
+ .change_language, .account_logo {
+    font-style:italic;
+     color:grey;
+     cursor: pointer;
 }
-
-.nl {
-	font-size: 1.54em;
-	font-weight: 300;
+ .nl {
+     font-size: 1.54em;
+     font-weight: 300;
 }
-
-[type="checkbox"] + span:not(.lever) {
-  padding-left: 25px;
+ #nume-participant {
+     min-width: 160px;
+     width: 20%;
+     text-align: center;
 }
-
-#nume-participant {
-	min-width: 160px;
-	width: 20%;
-	text-align: center;
+ [type="checkbox"] + span:not(.lever) {
+     padding-left: 25px;
 }
-
-#alertme {
-	color: #C62828;
+ #alertme {
+     color: #C62828;
 }
-
-.modactiv {
-	color: #2882c6;
+ .modactiv {
+     color: #2882c6;
 }
-
-.clasament-title {
-	font-size: 1.25em;
-	color: #0d47a1;
+ .clasament-title {
+     font-size: 1.25em;
+     color: #0d47a1;
 }
-
-.clasn {
-	text-align: left;
+ .clasn {
+     text-align: left;
 }
-
-.clasp {
-	text-align: left;
+ .clasp {
+     text-align: left;
 }
-
-#clasament {
-	width: 30%;
-	min-width: 325px;
-	margin: auto;
-	font-size: 1.2em;
-	font-weight: 100;
+ #clasament {
+     width: 30%;
+     min-width: 325px;
+     margin: auto;
+     font-size: 1.2em;
+     font-weight: 100;
 }
-
-#clasament-complet {
-	margin: auto;
-	font-size: 1.2em;
-	font-weight: 100;
+ #clasament-complet {
+     margin: auto;
+     font-size: 1.2em;
+     font-weight: 100;
 }
-
-#clasament .row,
-#clasament-complet .row,
-#clasament-final .row {
-	margin-bottom: 3px;
+ #clasament .row, #clasament-complet .row, #clasament-final .row {
+     margin-bottom: 3px;
 }
-
-#clasament .row .col,
-#clasament-complet .row .col,
-#clasament-final .row .col,
-{
-	padding: 0 5px;
+ #clasament .row .col, #clasament-complet .row .col, #clasament-final .row .col {
+     padding: 0 5px;
 }
-
-.link-clasament {
-	cursor: pointer;
-	color: #0d47a1;
-	font-size: 0.9em;
+ .link-clasament {
+     cursor: pointer;
+     color: #0d47a1;
+     font-size: 0.9em;
 }
-
-.clue {
-	margin: 0px auto;
-	display: block;
-	width: 100%;
-	max-width: 300px;
-	border: solid 2px #17326f;
-	border-radius: 5px;
-	-webkit-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
-	-moz-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
-	box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
-	cursor: pointer;
+ .clue {
+     margin: 0px auto;
+     display: block;
+     width: 100%;
+     max-width: 300px;
+     border: solid 2px #17326f;
+     border-radius: 5px;
+     -webkit-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
+     -moz-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
+     box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
+     cursor: pointer;
 }
-
-.modalthing {
-	display: none;
-	/* Hidden by default */
-	position: fixed;
-	/* Stay in place */
-	z-index: 1;
-	/* Sit on top */
-	padding-top: 100px;
-	/* Location of the box */
-	left: 0;
-	top: 0;
-	width: 100%;
-	/* Full width */
-	height: 100%;
-	/* Full height */
-	overflow: auto;
-	/* Enable scroll if needed */
-	/*background-color: rgb(0,0,0); /* Fallback color */
-	/*background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+ .modalthing {
+     display: none;
+     position: fixed;
+     z-index: 1;
+     padding-top: 100px;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     overflow: auto;
 }
-
-.modal-content {
-	margin: auto;
-	display: block;
-	width: 90%;
-	max-width: 450px;
-	cursor: pointer;
-	border: solid 2px #17326f;
-	border-radius: 5px;
-	-webkit-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
-	-moz-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
-	box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
+ .modal-content {
+     margin: auto;
+     display: block;
+     width: 90%;
+     max-width: 450px;
+     cursor: pointer;
+     border: solid 2px #17326f;
+     border-radius: 5px;
+     -webkit-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
+     -moz-box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
+     box-shadow: 3px 2px 19px 0px rgba(0, 0, 0, 0.53);
 }
-
-.modal-content {
-	-webkit-animation-name: zoom;
-	-webkit-animation-duration: 0.6s;
-	animation-name: zoom;
-	animation-duration: 0.6s;
+ .modal-content {
+     -webkit-animation-name: zoom;
+     -webkit-animation-duration: 0.6s;
+     animation-name: zoom;
+     animation-duration: 0.6s;
 }
-
-@-webkit-keyframes zoom {
-	from {
-		-webkit-transform: scale(0)
-	}
-	to {
-		-webkit-transform: scale(1)
-	}
+ @-webkit-keyframes zoom {
+     from {
+         -webkit-transform: scale(0) 
+    }
+     to {
+         -webkit-transform: scale(1) 
+    }
 }
-
-@keyframes zoom {
-	from {
-		transform: scale(0)
-	}
-	to {
-		transform: scale(1)
-	}
+ @keyframes zoom {
+     from {
+         transform: scale(0) 
+    }
+     to {
+         transform: scale(1) 
+    }
 }
-
-.close {
-	position: absolute;
-	top: 15px;
-	right: 35px;
-	color: #17326f;
-	font-size: 40px;
-	font-weight: bold;
-	transition: 0.3s;
+ .close {
+     position: absolute;
+     top: 15px;
+     right: 35px;
+     color: #17326f;
+     font-size: 40px;
+     font-weight: bold;
+     transition: 0.3s;
 }
-
-.close:hover,
-.close:focus {
-	color: #2d60d2;
-	text-decoration: none;
-	cursor: pointer;
+ .close:hover, .close:focus {
+     color: #2d60d2;
+     text-decoration: none;
+     cursor: pointer;
 }
-
-@media only screen and (max-width: 800px) {
-	.modal-content {
-		width: 100%;
-	}
+ @media only screen and (max-width: 800px) {
+     .modal-content {
+         width: 100%;
+    }
 }
-.whoami {
-    font-weight: 700;
-    
+ #incercare {
+     margin: 0px !important;
+     line-height: 100% !important;
 }
-#incercare {
-	margin: 0px !important;
-	line-height: 100% !important;
+ .error {
+     color: red;
 }
-
-.error {
-	color: red;
+ .succes {
+     color: green;
 }
-
-.succes {
-	color: green;
+ .mesajindiciu {
+     cursor: pointer;
 }
-
-.mesajindiciu {
-	cursor: pointer;
+ .letter {
+     margin-bottom: 10px;
 }
-
-.letter {
-	margin-bottom: 10px;
+ .letter a {
+     font-weight: bold;
 }
-
-.letter a {
-	font-weight: bold;
+ .menub {
+     font-size: 35px;
+     vertical-align: middle;
+     color: #90949a;
+     cursor: pointer;
+     text-decoration: none;
+     margin-right: 15px;
 }
-
-.menub {
-	font-size: 35px;
-	vertical-align: middle;
-	color: #90949a;
-	cursor: pointer;
-	text-decoration: none;
-	margin-right: 15px;
+ .reset {
+     color: #90949a57;
+     cursor: default;
 }
-
-.reset {
-	color: #90949a57;
-	cursor: default;
+ .resetactiv {
+     color: #90949a;
+     cursor: pointer;
 }
-
-.resetactiv {
-	color: #90949a;
-	cursor: pointer;
+ #level {
+     box-shadow: inset 0px 0px 15px 3px #0d47a1;
+     background: linear-gradient(to bottom, #0d47a1 5%, #415989 100%);
+     background-color: #2e466e;
+     border-radius: 17px;
+     -webkit-border-radius: 17px;
+     -moz-border-radius: 17px;
+     display: inline-block;
+     color: #ffffff;
+     font-size: 15px;
+     padding: 5px 15px;
+     cursor: default;
 }
-
-#level {
-	box-shadow: inset 0px 0px 15px 3px #0d47a1;
-	background: linear-gradient(to bottom, #0d47a1 5%, #415989 100%);
-	background-color: #2e466e;
-	border-radius: 17px;
-	-webkit-border-radius: 17px;
-	-moz-border-radius: 17px;
-	display: inline-block;
-	color: #ffffff;
-	font-size: 15px;
-	padding: 5px 15px;
-	cursor: default;
+ .instructiuni {
+     font-size: 1.2em;
 }
-
-.instructiuni {
-	font-size: 1.2em;
+ .instructiuni li {
+     margin-bottom: 15px;
 }
-
-.instructiuni li {
-	margin-bottom: 15px;
+ .instr_ico {
+     font-size: 25px;
+     vertical-align: middle;
+     color: #2e466e;
 }
-
-.instr_ico {
-	font-size: 25px;
-	vertical-align: middle;
-	color: #2e466e;
+ .back-link {
+     margin: 15px;
+     display: inline-block;
 }
-
-/*Style for back button*/
-.back-link {
-	margin: 15px;
-	display: inline-block;
+ .back-link img {
+     vertical-align: middle;
 }
-
-.back-link img {
-	vertical-align: middle;
+ .orange-button {
+     padding: 15px 25px;
+     font-weight: 700;
+     font-size: 20px;
+     border-radius: 30px;
+     display: inline-block;
+     color: #fff!important;
+     text-decoration: none!important;
+     background: #faa248;
+     border: none;
+     line-height: 14px;
+     margin-right: 10px;
+     vertical-align: middle;
 }
-
-.orange-button {
-	padding: 15px 25px;
-	font-weight: 700;
-	font-size: 20px;
-	border-radius: 30px;
-	display: inline-block;
-	color: #fff!important;
-	text-decoration: none!important;
-	background: #faa248;
-	border: none;
-	line-height: 14px;
-	margin-right: 10px;
-	vertical-align: middle;
+ #finalcongrats-name {
+     overflow: hidden;
+     text-overflow: ellipsis;
+     margin: 0 0 10px 15px;
+     font-size: 2em;
+     line-height: 1.5em;
 }
